opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/io-system-ocaml"
dev-repo: "git+https://github.com/clarus/io-system-ocaml.git"
bug-reports: "https://github.com/clarus/io-system-ocaml/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "lwt" {>= "2.4.7"}
  "ocaml" {>= "4.00.0"}
  "ocamlfind"
  "num"
]
tags: [
  "keyword:effects"
  "keyword:extraction"
]
synopsis: "Extraction to OCaml of system effects"
